[dependencies.libc]
version = "0.2"

[dependencies.nom]
version = "5.1"

[package]
authors = ["Nick Price <nick@spun.io>"]
categories = ["os", "os::unix-apis", "network-programming", "development-tools::ffi"]
description = "AF_PACKET bindings for Rust, primarily to be used for high-performance network security applications."
keywords = ["pcap", "af_packet", "packet", "security", "linux"]
license = "GPL-3.0"
name = "af_packet"
repository = "https://gitlab.com/DominoTree/rs-af_packet"
version = "0.3.2"
